@@ -35,6 +35,27 @@
             <summary>
             </summary>
             <bugs>
+                <bug id="1962" tool="jira">
+                    <description>
+                    	Introduced new 'lenient' properties in castor.properties so that new 
+                    	sequence order and id/href validation can be selectively turned off.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Carlo Romero</name>
+                        <email>carlo.romero@gs.com</email>
+                    </reporter>
+                    <type>Enh</type>
+                    <module>XML</module>
+                    <date>20070505</date>
+                </bug>
                 <bug id="1896" tool="jira">
                     <description>
                     	Removed (illegal) underscores from calls to PropertyChangeListeners.
